@@ -101,6 +101,7 @@ version ? (????-??-??):
   - added timeout mechanism for fetch_url(); without timeout support
     we could wait for LMS update info forever [chilan]
   - searching nodes by teryt localization [chilan]
+  - nodesearchresults: first operation introduced - connect do device [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
